--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,9 +20,11 @@
   <br />
 
   <div class="form-actions">
-     <%= f.button :submit, "Log in", class: 'btn btn-primary' %>
+     <%= f.button :submit, "Sign-up", class: 'btn btn-primary' %>
   </div>
 <% end %>
 <br />
 
 <%= render "devise/shared/links" %>
+
+</div>
