updates for adding courses

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -7,9 +7,10 @@
 		<h2>With Amanda.</h2>
 		<br />
 		<%= link_to 'Learn More', '#', class: 'btn btn-success' %>
-		<br /><br />
 		<br />
-<<div class="row feature text-center">
+    <br />
+		<br />
+<div class="row feature text-center">
   <div class="col-12 col-sm">
     <h3>Amazing Courses</h3>
     <br />
