--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -4,7 +4,7 @@
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
   box-shadow: 0px 1px 3px #2a2a2a;
-  background: image_url('dark_wood.png');
+  background: image_url('bg.jpg');
 }
 
 .navbar-inverse a.navbar-brand {
@@ -19,7 +19,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 370px;
+  height: 650px;
   box-shadow: 0px 3px 8px #2a2a2a;
   } 	
 
@@ -55,7 +55,7 @@
 }
 
 body {
-  background: image_url('bg.png');
+  background: image_url('bg.jpg');
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
 
@@ -69,35 +69,7 @@ body {
   padding: 10px;
 }
 
-html {
-  height: 100%;
-}
 
-body {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-#flex-content-container {
-  flex: 1;
-}
-
-#footer {
-  position: relative;
-  width: 100%;
-  min-height: 100px;
-  background-color: rgba(36, 32, 33, 0.9);
-  color: white;
-  font-family: "Helvetica Neue", Helvetica;
-  padding: 10px 0px;
-  margin-top: 30px;
-}
-
-#footer a {
-  color: white;
-  font-weight: 100;
-}
 
 
 
