--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -19,7 +19,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 650px;
+  height: 370px;
   box-shadow: 0px 3px 8px #2a2a2a;
   } 	
 
@@ -67,6 +67,10 @@ body {
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 10px;
+}
+
+.booyah-box h2, .booyah-box h1 {
+  margin: 10px;
 }
 
 
