--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,32 +1,19 @@
-<div class="hero">
-  <br/>
-  <div class="frosty col-10 offset-1 text-center">
-    <br />
-    <h1> Learn Magic from the Pros</h1>
-    <br />
-    <h2>I'm an illusionist, Amanda.</h2>
-    <br />
-    <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
-    <br /><br />
-  </div>
-</div>
 <br />
-<div class="row feature text-center">
-  <div class="col-12 col-sm">
-    <h3>Amazing Courses</h3>
-    <br />
-    <p> Choose from any number of courses to study with amazing teachers.</p>
-  </div>
 
-  <div class="col-12 col-sm">
-    <h3>Learn At Your Own Pace</h3>
-    <br />
-    <p>Enroll and access a courses archive of lessons.</p>
-  </div>
+<div class="booyah-box col-10 offset-1">
+  <h1 class="text-center">Learn something today</h1>
+  <hr />
 
-  <div class="col-12 col-sm">
-    <h3>Join our Community</h3>
-    <br />
-    <p>Learn with a community of like-minded individuals.</p>
+  <% @courses.each do |course| %>
+  <h2 class="text-center"><%= course.title %></h2>
+  <br />
+   <div class="row">
+  <div class="col-sm-8 col-12">
+    <%= course.description %>
   </div>
-</div>
+  <div class="col-sm-4 col-12 text-center">
+    <%= link_to 'Button', '#', class: 'btn btn-primary btn-large' %>
+    </div>
+  </div>
+   <br class="clr" />
+<% end %>
