--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+    <div id="flex-content-container">
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -40,6 +41,13 @@
 </nav>
 
     <%= yield %>
+    <div id="footer">
+      <div class="container">
+        <b>Teachers</b>
+    <br />
+    <%= link_to 'Teach a Course', new_instructor_course_path %>
+      </div>
+    </div>
 
   </body>
 </html>
