--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -10,7 +10,7 @@
   </div>
 
   <ul>
-    <% @course.sections.each do |section| %>>
+    <% @course.sections.each do |section| %>
       <li>
         <%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
@@ -19,4 +19,4 @@
     <% end %>
   </ul>
 
-</div
+</div> 
