--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -7,6 +7,8 @@
     
     <%= f.input :description %>
     <%= f.input :cost %>
+    <%= f.input :image %>
+
     <br />
     <%= f.submit "Create", class: 'btn btn-primary' %>
     <br />
