--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,7 +1,7 @@
 <br />
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center"><%= @course.title %></h1>
-  <%= image_tag course.image.to_s, class: 'img-fluid' %>
+  <%= image_tag @course.image.to_s, class: 'img-fluid' %>
   <br />
   <%= link_to 'Preview As Student...', course_path(@course), class: 'btn btn-warning float-right' %>
   <br class="clr" />
