--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -15,14 +15,34 @@
         <br />
         <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
       <% end %>
+
       <br />
       <br />
-            <% if current_user && current_user.enrolled_in?(@course) %>
+
+      <% if current_user && current_user.enrolled_in?(@course) %>
         <h3 class="badge badge-info">You Are Enrolled!</h3>
       <% else %>
         <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
+        <%= form_tag course_enrollments_path(@course) do %>
+          <article>
+            <% if flash[:error].present? %>
+              <div id="error_explanation">
+                <p><%= flash[:error] %></p>
+              </div>
+            <% end %>
+            <label class="amount">
+              <span>Amount: $5.00</span>
+            </label>
+          </article>
+
+          <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                  data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                  data-description="A month's subscription"
+                  data-amount="500"
+                  data-locale="auto"></script>
+        <% end %>
       <% end %>
-     </div>
+    </div>
 
     <div class="col-sm-8 col-12">
       <%= @course.description %>
@@ -37,21 +57,21 @@
           <%= section.title %>
         </h3>
         <div class="row">
-        <% section.lesson.each do |lesson| %>
-        <div class="col-12 col-sm-6">
-          <div class="lesson text-center">
-            <br />
-            <%= link_to lesson_path(lesson) do %>
-              <b><%= lesson.title %></b>
-              <br />
-              <%= lesson.subtitle %>
-            <% end %>
-          </div>
+          <% section.lesson.each do |lesson| %>
+            <div class="col-12 col-sm-6">
+              <div class="lesson text-center">
+                <br />
+                <%= link_to lesson_path(lesson) do %>
+                  <b><%= lesson.title %></b>
+                  <br />
+                  <%= lesson.subtitle %>
+                <% end %>
+              </div>
+            </div>
+          <% end %>
         </div>
-        <% end %>
+        <br class="clr" />
       </div>
-      <br class="clr" />
-    </div>
     <% end %>
   </div>
 </div>
