--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -57,7 +57,7 @@
           <%= section.title %>
         </h3>
         <div class="row">
-          <% section.lesson.each do |lesson| %>
+          <% section.lesson.rank(:row_order).each do |lesson| %>
             <div class="col-12 col-sm-6">
               <div class="lesson text-center">
                 <br />
