--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <ul>
-    <% @course.sections.each do |section| %>
+    <% section.lesson.rank(:row_order).each do |lesson| %>
       <li>
         <%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
