--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -2,11 +2,16 @@
   $(function() {
     $('.lessons').sortable({
       update: function( event, ui ) {
-                     alert("UpdateUrl: " + ui.item.data('update-url') + " Index: " + ui.item.index());
+        $.ajax({
+          type: 'PUT',
+          url: ui.item.data('update-url'),
+          dataType: 'json',
+          data: { lesson: { row_order_position: ui.item.index() } }
+        });
       }
     });
-  });
-</script>
+   });
+</script> 
 
 <br />
 <div class="booyah-box col-10 offset-1">
@@ -20,11 +25,21 @@
     <%= link_to 'Add a new section...', new_instructor_course_section_path(@course), class: 'btn btn-primary btn-lg' %>
   </div>
 
+  
   <ul>
-    <ul class="lessons">
-    <% @section.lesson.rank(:row_order).each do |lesson| %>
-      <li data-update-url="<%= instructor_lesson_path(lesson) %>">
+    <% current_course.sections.each do |section| %>
+      <li>
+        <%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
+        <ul class="lessons">
+          <% section.lessons.rank(:row_order).each do |lesson| %>
+            <li>
+              <b><%= lesson.title %></b>
+              -
+              <%= lesson.subtitle %>
+            </li>
+          <% end %>
+        </ul>
         <br class="clr" />
       </li>
     <% end %>
