--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,17 +1,4 @@
-<script>
-  $(function() {
-    $('.sections').sortable({
-      update: function( event, ui ) {
-        $.ajax({
-          type: 'PUT',
-          url: ui.item.data('update-url'),
-          dataType: 'json',
-          data: { section: { row_order_position: ui.item.index() } }
-        });
-      }
-    });
-   });
-</script> 
+
 <br />
 
 <div class="booyah-box col-10 offset-1">
@@ -27,7 +14,7 @@
       <% if current_user && current_user == @course.user %>
         <br />
         <br />
-        <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
+        %= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-primary' %>
       <% end %>
 
       <br />
