--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,8 +1,10 @@
 <script>
   $(function() {
-    $('.new-lesson-button').click(function() {
-      alert('hello!');
-    });
+   $('.new-lesson-button').click(function( event ) {
+  var lessonUrl = $( event.target).data('lesson-url');
+  $('#newLessonForm').attr('action', lessonUrl);
+});
+
 
     $('.lessons').sortable({
       update: function( event, ui ) {
@@ -16,8 +18,6 @@
     });
 
 
-
-  $(function() {
     $('.sections').sortable({
       update: function( event, ui ) {
         $.ajax({
@@ -28,8 +28,9 @@
         });
       }
     });
-   });
-</script> 
+
+  });
+</script>
 
 <br />
 <div class="booyah-box col-10 offset-1">
@@ -132,7 +133,7 @@
         </button>
         <h4 class="modal-title" id="newLessonModalLabel">Add a new lesson</h4>
       </div>
-      <%= simple_form_for @lesson, url: "#" do |f| %>
+      <%= simple_form_for @lesson, url: "#", html: {id: 'newLessonForm' } do |f| %>
         <div class="modal-body">
           <%= f.input :title %>
           <%= f.input :subtitle %>
