moving modal into new form for lesson update2

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,7 +14,7 @@
       <% if current_user && current_user == @course.user %>
         <br />
         <br />
-        %= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-primary' %>
+        <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-primary' %>
       <% end %>
 
       <br />
