--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -57,7 +57,7 @@
     </div>
         
         <!-- Button trigger modal -->
-       <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">
+       <button type="button" class="new-lesson-button btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">
           New Lesson...
         </button>
 
