moving modal into new form for lesson update3

--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -83,6 +83,7 @@
       </p>
       </div>
       </div>
+      <br class="clr">
             </li>
           <% end %>
         </ul>
@@ -142,8 +143,9 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <%= f.submit "Add the lesson", class: 'btn btn-primary' %>
-        </div>
-      <% end %>
+         </div>
+      </form>
+      <% end %>ç
     </div>
   </div>
 </div>
