--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -12,7 +12,8 @@ body {
   flex: 1;
 }
 
-#footer {
+
+ #footer {
   position: relative;
   width: 100%;
   min-height: 100px;
@@ -21,9 +22,18 @@ body {
   font-family: "Helvetica Neue", Helvetica;
   padding: 10px 0px;
   margin-top: 30px;
+  font-weight: 100;
 }
 
 #footer a {
   color: white;
   font-weight: 100;
+}
+
+.social-button {
+  margin: 4px;
+}
+
+.social a:hover {
+  text-decoration: none;
 }
